force-app/main/default/objects/OPP_Software_Asset__c.object
<CustomObject>
    <fields>
        <fullName>CHILDSOFTWARENAME__c</fullName>
        <label>CHILDSOFTWARENAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHILDSOFTWAREVERSION__c</fullName>
        <label>CHILDSOFTWAREVERSION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_License__c</fullName>
        <label>Count License</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDelete_By_PM_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDelete (By PM Asset)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Software__c</fullName>
        <formula>Parent_Software__c = null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASTESTUNITPRICECURR__c</fullName>
        <label>LASTESTUNITPRICECURR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>THB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LASTESTUNITPRICE__c</fullName>
        <label>LASTESTUNITPRICE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Total__c</fullName>
        <label>License Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Using__c</fullName>
        <label>License Using</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManuFacturer__c</fullName>
        <label>ManuFacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Software_Code__c</fullName>
        <label>Master Software Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Software_Name__c</fullName>
        <label>Master Software Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Software__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Software</label>
        <referenceTo>OPP_Software_Asset__c</referenceTo>
        <relationshipLabel>OPP Software Asset</relationshipLabel>
        <relationshipName>OPP_Software_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OPP Software Asset</label>
    <nameField>
        <label>OPP Software Asset</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>